Fixed navbar word wrap on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body{
     font-family: 'Poppins', sans-serif;
     margin-left: 15px;
     margin-right: 15px;
+    white-space: nowrap;
 }
 
 .nav-link{
